# comm-amazon-connect

./: .gitignore  Cargo.toml  LICENCE  LICENSE  README.md  config.sample.toml  schema.sql
.github/workflows/: rust.yml
amazon-connect-ui/: config.sample.js  connect-streams-1.6.5-min.js  index.html
attribute-ui/: config.js  index.html  package.json  tsconfig.json
attribute-ui/src/: index.scss
attribute-ui/src/components/: App.tsx  Credentials.tsx  Error.tsx  Layout.tsx  Loader.tsx  icons.tsx  translations.ts
aws_funcs/: assign_id.js
src/: comm.rs  config.rs  error.rs  main.rs
