[package]
name = "id-contact-amazon-connect"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-contact-jwt = { git = "https://github.com/id-contact/id-contact-jwt.git" }
id-contact-proto = { git = "https://github.com/id-contact/id-contact-proto.git" }
id-contact-comm-common = { git = "https://github.com/id-contact/comm-common.git" }
josekit = "0.7.1"
postgres = "0.19.0"
rand = "0.8.3"
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", features=["postgres_pool"] }
serde = "1.0.123"
