[package]
name = "id-contact-amazon-connect"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-contact-jwt = { git = "https://github.com/id-contact/id-contact-jwt.git" }
id-contact-proto = { git = "https://github.com/id-contact/id-contact-proto.git" }
id-contact-comm-common = { git = "https://github.com/id-contact/comm-common.git" }
josekit = "0.7.1"
postgres = "0.19.0"
rand = "0.8.3"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["postgres_pool"] }
serde = "1.0.123"
